@@ -1,14 +1,11 @@
 package dev.ener_track.com.msvc_data.infractructure.service;
 
-
 import dev.ener_track.com.msvc_data.api.dto.response.CountryEnergyResponse;
 import dev.ener_track.com.msvc_data.api.dto.response.group_response.EnergyGroupResponse;
-import dev.ener_track.com.msvc_data.domain.entities.EnergyRecordEntity;
+import dev.ener_track.com.msvc_data.api.dto.response.group_response.EnergyTypeMostUseResponse;
 import dev.ener_track.com.msvc_data.domain.repositories.EnergyRecordRepository;
-import dev.ener_track.com.msvc_data.infractructure.adstract_service.IService;
-import dev.ener_track.com.msvc_data.infractructure.client.EnergyFeing;
+import dev.ener_track.com.msvc_data.infractructure.adstract_service.IEnergyRecordService;
 import lombok.AllArgsConstructor;
-import org.springframework.cloud.openfeign.FeignClient;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -17,37 +14,43 @@ import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class EnergyRecordService implements IService {
+public class EnergyRecordService implements IEnergyRecordService {
 
-    private final EnergyRecordRepository energyRecordRepository;
-    private final EnergyFeing energyFeing;
+        private final EnergyRecordRepository energyRecordRepository;
 
-    @Override
-    public List<EnergyGroupResponse> getTop5CountriesByEnergyType() {
-        // 1️⃣ Consultar datos (nativo: cada fila viene como Map<String, Object>)
-        List<Map<String, Object>> records = energyRecordRepository.findTop5CountriesByEnergyType();
+        @Override
+        public List<EnergyGroupResponse> getTop5EnergyTypesByCountry() {
+                List<Map<String, Object>> results = energyRecordRepository.findTop5CountriesAndTheirTop5EnergyTypes();
 
-        // 2️⃣ Agrupar por nombre del tipo de energía
-        Map<String, List<Map<String, Object>>> groupedByEnergyType = records.stream()
-                .collect(Collectors.groupingBy(r -> (String) r.get("energy_type_name")));
+                // Agrupamos por país
+                Map<String, List<CountryEnergyResponse>> grouped = results.stream()
+                                .collect(Collectors.groupingBy(
+                                                row -> (String) row.get("country"),
+                                                Collectors.mapping(row -> {
+                                                        CountryEnergyResponse response = new CountryEnergyResponse();
+                                                        response.setEnergyTypeId((String) row.get("energy_type_id"));
+                                                        response.setEnergyTypeName(
+                                                                        (String) row.get("energy_type_name"));
+                                                        response.setTotalGeneratedMwh(
+                                                                        ((Number) row.get("total_generated_mwh"))
+                                                                                        .doubleValue());
+                                                        return response;
+                                                }, Collectors.toList())));
 
-        // 3️⃣ Mapear a la respuesta final
-        return groupedByEnergyType.entrySet().stream()
-                .map(entry -> EnergyGroupResponse.builder()
-                        .energyTypeName(entry.getKey()) // nombre de la energía
-                        .topCountries(entry.getValue().stream()
-                                .map(r -> CountryEnergyResponse.builder()
-                                        .country((String) r.get("country"))
-                                        .generatedMwh(Double.parseDouble(r.get("generated_mwh").toString()))
-                                        .year((Integer) r.get("year"))
-                                        .capacityMwh(Double.parseDouble(r.get("capacity_mwh").toString()))
-                                        .emissionReductionTons(Double.parseDouble(r.get("emission_reduction_tons").toString()))
-                                        .investmentUsd(Double.parseDouble(r.get("investment_usd").toString()))
-                                        .build())
-                                .collect(Collectors.toList()))
-                        .build())
-                .collect(Collectors.toList());
-    }
+                
+                return grouped.entrySet().stream()
+                                .map(entry -> {
+                                        EnergyGroupResponse response = new EnergyGroupResponse();
+                                        response.setCountry(entry.getKey());
+                                        response.setTopEnergyTypes(entry.getValue());
+                                        return response;
+                                })
+                                .toList();
+        }
 
+        @Override
+        public List<EnergyTypeMostUseResponse> getAllEnergyTypesUsage() {
+                return energyRecordRepository.findAllEnergyTypesUsage();
+        }
 
 }
